[gd_scene load_steps=10 format=2]

[ext_resource path="res://Graphics/card_back.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Deck.gd" type="Script" id=2]
[ext_resource path="res://Audio/card_draw.wav" type="AudioStream" id=3]
[ext_resource path="res://Font/TitilliumWeb-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Graphics/UI/attention_arrow.png" type="Texture" id=5]
[ext_resource path="res://Prefab/ChangeSceneButton.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Draw"
tracks/0/type = "bezier"
tracks/0/path = NodePath("TopCard:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -1200, -0.25, 0, 0.25, 0, -1200, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 0.8, 0.9 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TopCard:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 0.8, 0.9 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("TopCard:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_card_draw_SFX"
}, {
"args": [  ],
"method": "spawn_card"
} ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 325, 450 )

[sub_resource type="DynamicFont" id=3]
size = 55
outline_color = Color( 0.345098, 0.313726, 0.313726, 1 )
extra_spacing_top = -30
font_data = ExtResource( 4 )

[node name="Deck" type="Area2D"]
script = ExtResource( 2 )

[node name="RestOfDeck" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="TopCard" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Draw = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ChangeStateToIdle" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Tutorial" type="Node2D" parent="."]
position = Vector2( 0, -550 )

[node name="Arrow" type="Sprite" parent="Tutorial"]
position = Vector2( 200, 0 )
rotation = -2.26893
texture = ExtResource( 5 )

[node name="Instruc" type="Label" parent="Tutorial"]
margin_left = -368.415
margin_top = 4.42065
margin_right = 139.585
margin_bottom = 59.4207
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 0.721569 )
text = "Tap the deck to draw!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Node2D" parent="."]
visible = false

[node name="ChangeSceneButton" parent="PlayAgainButton" instance=ExtResource( 6 )]
button_text = "Play Again"
target_scene = "res://Scenes/Game.tscn"
[connection signal="input_event" from="." to="." method="_on_Deck_input_event"]
[connection signal="timeout" from="ChangeStateToIdle" to="." method="_on_ChangeStateToIdle_timeout"]
